# inta

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  eslint.config.js  package-lock.json  package.json  pyproject.toml  stylelint.config.js
src/inta/box_plot/: box_plot.py  index.html  script.js  style.css
src/inta/learning_curve/: learning_curve.py
src/inta/shap_plots/: shap_plotter.py
